{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 435,
  "lineage": "0ea55c06-0ae7-8096-3c95-be0839a77bb3",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06777e7ef7441deff",
            "arn": "arn:aws:ec2:us-east-1:492267475956:instance/i-093d71a865b89bb13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-proyecto-1-data-collector-profile",
            "id": "i-093d71a865b89bb13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "prod-mindbio-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0038e02df2de91587"
              }
            ],
            "primary_network_interface_id": "eni-0038e02df2de91587",
            "private_dns": "ip-10-100-1-63.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.63",
            "public_dns": "ec2-100-27-48-133.compute-1.amazonaws.com",
            "public_ip": "100.27.48.133",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:492267475956:key/9100aa46-caeb-4b6b-b52a-091928417962",
                "tags": {
                  "Name": "prod-proyecto-1-APP-SERVER-STORAGE"
                },
                "tags_all": {
                  "Company": "Grupomas",
                  "Name": "prod-proyecto-1-APP-SERVER-STORAGE",
                  "Project": "Proyecto"
                },
                "throughput": 125,
                "volume_id": "vol-0ae58339a749901c4",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3a2333e803c2301",
            "tags": {
              "Name": "prod-proyecto-1-APP-SERVER"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-APP-SERVER",
              "Project": "Proyecto"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae35c8bce862a887"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "i-093d71a865b89bb13",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.EC2.aws_security_group.ec2_sg",
            "module.iam.aws_iam_instance_profile.data_collector",
            "module.iam.aws_iam_role.data_collector",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_server_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:492267475956:targetgroup/prod-proyecto-1/9afccb1b83c3102d-20260119171842203600000004",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:targetgroup/prod-proyecto-1/9afccb1b83c3102d",
            "target_id": "i-093d71a865b89bb13"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.EC2.aws_instance.app_server",
            "module.EC2.aws_security_group.ec2_sg",
            "module.iam.aws_iam_instance_profile.data_collector",
            "module.iam.aws_iam_role.data_collector",
            "module.network.aws_lb_target_group.app_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:security-group/sg-0ae35c8bce862a887",
            "description": "Allow inbound HTTPS/HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae35c8bce862a887",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-proyecto-1-APP",
            "name_prefix": "",
            "owner_id": "492267475956",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-proyecto-1-APP-SERVER"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-APP-SERVER",
              "Project": "Proyecto"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "sg-0ae35c8bce862a887",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.app_datacollector",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:security-group/sg-0d30e4d8bf6c6c8b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d30e4d8bf6c6c8b3",
            "ingress": [],
            "name": "prod-proyecto-1-app-1",
            "name_prefix": "",
            "owner_id": "492267475956",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Company": "Grupomas",
              "Project": "Proyecto"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "sg-0d30e4d8bf6c6c8b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:security-group/sg-049ba7e3084cef4c9",
            "description": "Access to the shared database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049ba7e3084cef4c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "prod-proyecto-1-DB",
            "name_prefix": "",
            "owner_id": "492267475956",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Company": "Grupomas",
              "Project": "Proyecto"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "sg-049ba7e3084cef4c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:internet-gateway/igw-082317b609755a4a6",
            "id": "igw-082317b609755a4a6",
            "owner_id": "492267475956",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-proyecto-1"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1",
              "Project": "Proyecto"
            },
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:loadbalancer/app/prod-proyecto-1/80e90e04b75f98f6",
            "arn_suffix": "app/prod-proyecto-1/80e90e04b75f98f6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-proyecto-1-1535168852.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:492267475956:loadbalancer/app/prod-proyecto-1/80e90e04b75f98f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-proyecto-1",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-049d4e35f25ce96f6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bcaaa228f584399d"
              },
              {
                "subnet_id": "subnet-0d3a2333e803c2301"
              }
            ],
            "subnets": [
              "subnet-0bcaaa228f584399d",
              "subnet-0d3a2333e803c2301"
            ],
            "tags": {
              "Name": "prod-proyecto-1"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1",
              "Project": "Proyecto"
            },
            "vpc_id": "vpc-07aef9ef550c1ceb2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:loadbalancer/app/prod-proyecto-1/80e90e04b75f98f6"
          },
          "dependencies": [
            "module.network.aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:listener/app/prod-proyecto-1/80e90e04b75f98f6/17db8bf686d3feeb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:492267475956:listener/app/prod-proyecto-1/80e90e04b75f98f6/17db8bf686d3feeb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:loadbalancer/app/prod-proyecto-1/80e90e04b75f98f6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Company": "Grupomas",
              "Project": "Proyecto"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:listener/app/prod-proyecto-1/80e90e04b75f98f6/17db8bf686d3feeb"
          },
          "dependencies": [
            "module.network.aws_lb.main",
            "module.network.aws_security_group.alb_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:targetgroup/prod-proyecto-1/9afccb1b83c3102d",
            "arn_suffix": "targetgroup/prod-proyecto-1/9afccb1b83c3102d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:492267475956:targetgroup/prod-proyecto-1/9afccb1b83c3102d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-proyecto-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "prod-proyecto-1"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1",
              "Project": "Proyecto"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492267475956:targetgroup/prod-proyecto-1/9afccb1b83c3102d"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:route-table/rtb-072751f829380e80f",
            "id": "rtb-072751f829380e80f",
            "owner_id": "492267475956",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082317b609755a4a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-proyecto-1-public"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-public",
              "Project": "Proyecto"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "rtb-072751f829380e80f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6a21d2d6a609549",
            "region": "us-east-1",
            "route_table_id": "rtb-072751f829380e80f",
            "subnet_id": "subnet-0d3a2333e803c2301"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0548b9135cccdc182",
            "region": "us-east-1",
            "route_table_id": "rtb-072751f829380e80f",
            "subnet_id": "subnet-0bcaaa228f584399d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:security-group/sg-049d4e35f25ce96f6",
            "description": "Allow inbound HTTPS/HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049d4e35f25ce96f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-proyecto-1-ALB",
            "name_prefix": "",
            "owner_id": "492267475956",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-proyecto-1-ALB"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-ALB",
              "Project": "Proyecto"
            },
            "timeouts": null,
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "sg-049d4e35f25ce96f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:subnet/subnet-088e94c67ce98cfb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088e94c67ce98cfb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492267475956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-proyecto-1-private-1"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-private-1",
              "Project": "Proyecto"
            },
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "subnet-088e94c67ce98cfb1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:subnet/subnet-05cac462d3b31b809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cac462d3b31b809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492267475956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-proyecto-1-private-2"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-private-2",
              "Project": "Proyecto"
            },
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "subnet-05cac462d3b31b809",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:subnet/subnet-0d3a2333e803c2301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3a2333e803c2301",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492267475956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-proyecto-1-public-1"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-public-1",
              "Project": "Proyecto"
            },
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "subnet-0d3a2333e803c2301",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:subnet/subnet-0bcaaa228f584399d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcaaa228f584399d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492267475956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-proyecto-1-public-2"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1-public-2",
              "Project": "Proyecto"
            },
            "vpc_id": "vpc-07aef9ef550c1ceb2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "subnet-0bcaaa228f584399d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492267475956:vpc/vpc-07aef9ef550c1ceb2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0f00cde0b15aa5a6a",
            "default_route_table_id": "rtb-041678b36c5606007",
            "default_security_group_id": "sg-0af5251220026865d",
            "dhcp_options_id": "dopt-0476acbfaad03621e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07aef9ef550c1ceb2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041678b36c5606007",
            "owner_id": "492267475956",
            "region": "us-east-1",
            "tags": {
              "Name": "prod-proyecto-1"
            },
            "tags_all": {
              "Company": "Grupomas",
              "Name": "prod-proyecto-1",
              "Project": "Proyecto"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "492267475956",
            "id": "vpc-07aef9ef550c1ceb2",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}